# email-service-app

./: .env  Cargo.toml  dockerfile  render.yaml
src/: main.rs
src/configurations/: db_configurations.rs  email_config.rs  mod.rs
src/implementations/: api_router.rs  data-validation.rs  load_configurations.rs  mod.rs  user_crud_service.rs
src/models/: deserializer.rs  load_properties.rs  mod.rs  user_model.rs
src/utils/: api_key.rs
