[package]
name = "email-service-app"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = { version = "4", features = ["rustls-0_23"]}
serde = { version = "1", features = ["derive"] }
serde_json = "1"
lettre = { version = "0.10", features = ["builder", "smtp-transport"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
dotenv = "0.15"
validator = { version = "0.16", features = ["derive"] }
env_logger = "0.10"
log = "0.4"
config = { version = "0.14" }
rustls = "0.23"
rustls-pemfile = "2"

[profile.release]
opt-level = 3